assets/css/main.css
/* ... */
		@media screen and (max-width: 980px) {

			#footer > .inner section:nth-child(1) {
				width: 66%;
				margin-right: 0;
			}

			#footer > .inner section:nth-child(2) {
				width: calc(33% - 2.5em);
				margin-left: 2.5em;
			}

		}

		@media screen and (max-width: 736px) {

			#footer {
				padding: 3em 0 1em 0 ;
			}

				#footer > .inner {
					-moz-flex-direction: column;
					-webkit-flex-direction: column;
					-ms-flex-direction: column;
					flex-direction: column;
				}

					#footer > .inner section:nth-child(1) {
						width: 100%;
						margin-right: 0;
						margin: 3em 0 0 0;
					}

					#footer > .inner section:nth-child(2) {
						-moz-order: -1;
						-webkit-order: -1;
						-ms-order: -1;
						order: -1;
						width: 100%;
						margin-left: 0;
					}

					#footer > .inner .copyright {
						margin-top: 3em;
					}

		}

		@media screen and (max-width: 480px) {

			#footer > .inner .copyright {
				margin-top: 3em;
			}

				#footer > .inner .copyright li {
					border-left: 0;
					padding-left: 0;
					margin: 0.75em 0 0 0;
					display: block;
					line-height: inherit;
				}

					#footer > .inner .copyright li:first-child {
						margin-top: 0;
					}

		}

/* Wrapper */

	#wrapper > * > .inner {
		width: 100%;
		max-width: 68em;
		margin: 0 auto;
		padding: 0 2.5em;
	}

		@media screen and (max-width: 736px) {

			#wrapper > * > .inner {
				padding: 0 1.25em;
			}

		}

		#wrapper > * > * > .inner {
			width: 100%;
			max-width: 68em;
			margin: 0 auto;
			padding: 0 2.5em;
		}

			@media screen and (max-width: 736px) {

				#wrapper > * > .inner {
					padding: 0 1.25em;
				}

			}



/* OUR CSS */
  .aboveButton {
    margin-bottom: 0px;
    margin-top: 2em;
  }
  .ourButton {
    width: 100%;
  }

  .help {
    font-size: 130%;
    margin-bottom: .5em;
    margin-left: .55em;
  }

  .ownAmount {
  	margin-top:4em;
  }


  /* CSS for tip.html */

	* {
	  -webkit-box-sizing:border-box;
	  -moz-box-sizing:border-box;
	  box-sizing:border-box;
	}

	*:before, *:after {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	}

	.clearfix {
	  clear:both;
	}

	.text-center {text-align:center;}

	pre {
	display: block;
	padding: 9.5px;
	margin: 0 0 10px;
	font-size: 13px;
	line-height: 1.42857143;
	color: #333;
	word-break: break-all;
	word-wrap: break-word;
	background-color: #F5F5F5;
	border: 1px solid #CCC;
	border-radius: 4px;
	}

	.header {
	  padding:20px 0;
	  position:relative;
	  margin-bottom:10px;

	}

	.header:after {
	  content:"";
	  display:block;
	  height:1px;
	  background:#eee;
	  position:absolute;
	  left:30%; right:30%;
	}

	.header h2 {
	  font-size:3em;
	  font-weight:300;
	  margin-bottom:0.2em;
	}

	.header p {
	  font-size:14px;
	}

	.success-box {
	  margin:50px 0;
	  padding:10px 10px;
	  border:1px solid #eee;
	  background:#f9f9f9;
	}

	.success-box img {
	  margin-right:10px;
	  display:inline-block;
	  vertical-align:top;
	}

	.success-box > div {
	  vertical-align:top;
	  display:inline-block;
	  color:#888;
	}



	/* Rating Star Widgets Style */
	.rating-stars ul {
	  list-style-type:none;
	  padding:0;

	  -moz-user-select:none;
	  -webkit-user-select:none;
	}
	.rating-stars ul > li.star {
	  display:inline-block;

	}

	/* Idle State of the stars */
	.rating-stars ul > li.star > i.fa {
	  font-size:2.5em; /* Change the size of the stars */
	  color:#ccc; /* Color on idle state */
	}

	/* Hover state of the stars */
	.rating-stars ul > li.star.hover > i.fa {
	  color:#FFCC36;
	}

	/* Selected state of the stars */
	.rating-stars ul > li.star.selected > i.fa {
	  color:#FF912C;
	}

	/* Help Page Button on index.html */
	.helpButton {
		right: 0;
		float: right;
	}

	.helpTitle {
		font-weight: bold;
	}

